<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fill Me!</string>
    <string name="preference_file_key" translatable="false">preference_file</string>

    <string name="title_activity_level_select">Level Select</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About - Fill Me!</string>

    <string name="filled_square_1">%1$d/</string>
    <string name="filled_square_2">%1$d</string>

    <string name="level_name">Level %1$d</string>
    <string name="level_name_pause">Level %1$d - Pause</string>
    <string name="level_name_won">Level %1$d - You Won</string>
    <string name="level_name_lost">Level %1$d - You Lost</string>

    <string name="min_percentage">≥ %1$d%%</string>
    <string name="max_circles_count">≤ %1$d</string>
    <string name="level_select">Level Select</string>
    <string name="level_select_short">Levels List</string>
    <string name="restart">Restart</string>
    <string name="next_level">Next</string>

    <string name="intro">Show Intro</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="progress_erased">Progress has been reset</string>
    <string name="background_music">Background Music</string>
    <string name="sounds">Sounds</string>

    <string name="text_logo_part_1">Fill</string>
    <string name="text_logo_part_2">Me!</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="minimum_square_percentage">Minimum square percentage</string>
    <string name="maximum_circles_count">Maximum circles count</string>
    <string name="stars_required">%1$d/%2$d</string>
    <string name="expand_button">Expand Button</string>

    <string name="version">Version: %1$s</string>
    <string name="source_code">Source Code: <a href="https://github.com/zavedyaev/fill_me">GitHub</a></string>
    <string name="about_design">Design / Development: <a href="http://zavedyaev.ru">V.Zavedyaev</a></string>
    <string name="about_music">Music / Sounds Effects: <a href="https://vk.com/iprogger">E.Vladimirov</a></string>
    <string name="feedback">Feedback</string>
    <string name="rate_or_share">Rate or Share</string>

    <string name="feedback_email_title">Fill Me! Feedback</string>
    <string name="feedback_email_body">Enter your message here</string>
    <string name="feedback_email_intent_title">Send Feedback Email</string>

    <string name="onboard_title_2">Welcome!</string>
    <string name="onboard_body_2">The goal of this game - fill all possible place using a minimum count of circles</string>

    <string name="onboard_title_3">Square</string>
    <string name="onboard_body_3">On the top status bar, you can see current (70) and minimum required (65) percent of the square. You need to fill more than minimum square percentage to win</string>

    <string name="onboard_title_4">Circles Count</string>
    <string name="onboard_body_4">You have a limited amount of circles to draw. In case of a failure, you will lose your circle. Use them smartly</string>

    <string name="onboard_title_5">Circle Drawing</string>
    <string name="onboard_body_5">To draw a circle hold your finger on a center of the circle you want to draw. To stop drawing remove the finger.</string>

    <string name="onboard_title_6">Watch what you drawing</string>
    <string name="onboard_body_6">When you started drawing you can move your finger away to see the circle clearly.</string>

    <string name="onboard_title_7">Watch for borders</string>
    <string name="onboard_body_7">Do not intersect level borders, otherwise, you will lose your circle.</string>

    <string name="onboard_title_8">Dashes</string>
    <string name="onboard_body_8">You can cross dashes by your circle, but we will calculate square using only circle parts inside dashes</string>

    <string name="onboard_title_9">Let\'s Play!</string>
    <string name="onboard_body_9">Hope you will enjoy the game</string>
</resources>
