<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/root">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/title_activity_settings"
            app:titleTextColor="#ffffff"
            app:navigationIcon="@drawable/ic_home"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/backgroundMusicSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:theme="@style/SwitchButton"
                android:text="@string/background_music"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/soundsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:theme="@style/SwitchButton"
                android:text="@string/sounds"/>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_progress"
                android:id="@+id/resetProgressButton"
                style="@style/ContainedButton"/>
        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:id="@+id/introButton"
                style="@style/ContainedButton"/>

    </LinearLayout>
</LinearLayout>