<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/aboutMainLayout">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
        <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/aboutCardView">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp">

                    <TextView
                            android:text="@string/title_activity_about"
                            android:layout_width="match_parent"
                            android:height="40dp"
                            android:textAppearance="@style/CardViewTitle"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:layout_marginBottom="8dp"/>

                    <TextView
                            android:id="@+id/versionTextView"
                            android:text="@string/version"
                            android:layout_width="wrap_content"
                            android:textAppearance="@style/CardViewBody"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"/>
                    <TextView
                            android:id="@+id/sourceCodeTextView"
                            android:text="@string/source_code"
                            android:layout_width="wrap_content"
                            android:textAppearance="@style/CardViewBody"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"/>


                    <TextView
                            android:id="@+id/designTextView"
                            android:text="@string/about_design"
                            android:layout_width="wrap_content"
                            android:textAppearance="@style/CardViewBody"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"/>

                    <TextView
                            android:id="@+id/musicTextView"
                            android:text="@string/about_music"
                            android:layout_width="wrap_content"
                            android:textAppearance="@style/CardViewBody"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"/>

                </LinearLayout>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback"
                            android:id="@+id/feedbackButton"
                            style="@style/TextButton"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate_or_share"
                            android:id="@+id/rateOrShareButton"
                            style="@style/TextButton"/>

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>