<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
        <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp">

                    <TextView
                            android:id="@+id/levelName"
                            android:text="@string/level_name"
                            android:layout_width="match_parent"
                            android:height="40dp"
                            android:textAppearance="@style/CardViewTitle"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"/>

                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal"
                                  android:layout_marginTop="8dp">

                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:id="@+id/levelRating1"
                                android:numStars="1"
                                android:isIndicator="true"
                                android:rating="1"
                                android:layout_gravity="center_vertical"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=":"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_square_black"
                                android:layout_gravity="center_vertical"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/levelRating1MinSquare"
                                android:text="@string/min_percentage"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_circle_black"
                                android:layout_gravity="center_vertical"
                                android:paddingStart="16dp"
                                android:paddingEnd="4dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/levelRating1MaxCircles"
                                android:text="@string/max_circles_count"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:id="@+id/levelRating2"
                                android:numStars="1"
                                android:isIndicator="true"
                                android:rating="1"
                                android:layout_gravity="center_vertical"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=":"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_square_black"
                                android:layout_gravity="center_vertical"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/levelRating2MinSquare"
                                android:text="@string/min_percentage"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_circle_black"
                                android:layout_gravity="center_vertical"
                                android:paddingStart="16dp"
                                android:paddingEnd="4dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/levelRating2MaxCircles"
                                android:text="@string/max_circles_count"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:id="@+id/levelRating3"
                                android:numStars="1"
                                android:isIndicator="true"
                                android:rating="0"
                                android:layout_gravity="center_vertical"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=":"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_square_black"
                                android:layout_gravity="center_vertical"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/levelRating3MinSquare"
                                android:text="@string/min_percentage"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_circle_black"
                                android:layout_gravity="center_vertical"
                                android:paddingStart="16dp"
                                android:paddingEnd="4dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/levelRating3MaxCircles"
                                android:text="@string/max_circles_count"
                                android:textAppearance="@style/CardViewBody"
                                android:layout_gravity="center_vertical"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restart"
                            android:id="@+id/restartButton"
                            style="@style/TextButton"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/level_select"
                            android:id="@+id/levelSelectButton"
                            style="@style/TextButton"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/next_level"
                            android:id="@+id/nextLevelButton"
                            style="@style/TextButton"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>